# ramdisk_generator

./: CMakeLists.txt  README.md  build.sh  rdgen.c  system_config.h
